--- a/workflows/triple/env0.workflow.yml
+++ b/workflows/triple/env0.workflow.yml
@@ -2,23 +2,28 @@ environments:
   rootService1:
     name: rootService1
     templateName: 'null resource'
+    workspaceName: 'rootService1'
   rootService2:
     name: rootService2
     templateName: 'null resource'
+     workspaceName: 'rootService2'
   middleService1:
     name: middleService1
     templateName: 'null resource'
+    workspaceName: 'middleService1'
     needs:
       - rootService1
       - rootService2
   middleService2:
     name: middleService2
     templateName: 'null resource'
+    workspaceName: 'middleService2'
     needs:
       - rootService1
       - rootService2
   finalService:
     name: finalService
     templateName: 'null resource'
+    workspaceName: 'finalService'
     needs:
       - middleService1
