--- a/workflows/triple/env0.workflow.yml
+++ b/workflows/triple/env0.workflow.yml
@@ -14,13 +14,13 @@ environments:
     needs:
       - rootService1
       - rootService2
-  middleService2:
-    name: middleService2
-    templateName: 'null resource'
-    workspace: 'middleService2'
-    needs:
-      - rootService1
-      - rootService2
+#  middleService2:
+#   name: middleService2
+#    templateName: 'null resource'
+#    workspace: 'middleService2'
+#    needs:
+#      - rootService1
+#      - rootService2
   finalService:
     name: finalService
     templateName: 'null resource'
