--- a/workflows/triple/env0.workflow.yml
+++ b/workflows/triple/env0.workflow.yml
@@ -7,13 +7,13 @@ environments:
     name: rootService2
     templateName: 'null resource'
     workspace: 'rootService2'
-  middleService1:
-    name: middleService1
-    templateName: 'null resource'
-    workspace: 'middleService1'
-    needs:
-      - rootService1
-      - rootService2
+#  middleService1:
+#    name: middleService1
+#    templateName: 'null resource'
+#    workspace: 'middleService1'
+#    needs:
+#      - rootService1
+#      - rootService2
 #  middleService2:
 #   name: middleService2
 #    templateName: 'null resource'
