--- a/workflows/triple/env0.workflow.yml
+++ b/workflows/triple/env0.workflow.yml
@@ -7,23 +7,23 @@ environments:
     name: rootService2
     templateName: 'null resource'
     workspace: 'rootService2'
-#  middleService1:
-#    name: middleService1
-#    templateName: 'null resource'
-#    workspace: 'middleService1'
-#    needs:
-#      - rootService1
-#      - rootService2
-#  middleService2:
-#   name: middleService2
-#    templateName: 'null resource'
-#    workspace: 'middleService2'
-#    needs:
-#      - rootService1
-#      - rootService2
+  middleService1:
+    name: middleService1
+    templateName: 'null resource'
+    workspace: 'middleService1'
+    needs:
+      - rootService1
+      - rootService2
+  middleService2:
+   name: middleService2
+    templateName: 'null resource'
+    workspace: 'middleService2'
+    needs:
+      - rootService1
+      - rootService2
   finalService:
     name: finalService
     templateName: 'null resource'
     workspace: 'finalService'
-#    needs:
-#      - middleService1
+    needs:
+      - middleService1
