--- a/workflows/triple/env0.workflow.yml
+++ b/workflows/triple/env0.workflow.yml
@@ -2,28 +2,28 @@ environments:
   rootService1:
     name: rootService1
     templateName: 'null resource'
-    workspace: 'rootService1'
+    workspace: 'rootService11'
   rootService2:
     name: rootService2
     templateName: 'null resource'
-    workspace: 'rootService2'
+    workspace: 'rootService21'
   middleService1:
     name: middleService1
     templateName: 'null resource'
-    workspace: 'middleService1'
+    workspace: 'middleService11'
     needs:
       - rootService1
       - rootService2
   middleService2:
    name: middleService2
    templateName: 'null resource'
-   workspace: 'middleService2'
+   workspace: 'middleService21'
    needs:
       - rootService1
       - rootService2
   finalService:
     name: finalService
     templateName: 'null resource'
-    workspace: 'finalService'
+    workspace: 'finalService1'
     needs:
       - middleService1
