--- a/workflows/triple/env0.workflow.yml
+++ b/workflows/triple/env0.workflow.yml
@@ -2,28 +2,28 @@ environments:
   rootService1:
     name: rootService1
     templateName: 'null resource'
-    workspace: 'rootService111'
+    workspace: 'rootService1111'
   rootService2:
     name: rootService2
     templateName: 'null resource'
-    workspace: 'rootService211'
+    workspace: 'rootService2111'
   middleService1:
     name: middleService1
     templateName: 'null resource'
-    workspace: 'middleService111'
+    workspace: 'middleService1111'
     needs:
       - rootService1
       - rootService2
-#  middleService2:
-#   name: middleService2
-#   templateName: 'null resource'
-#   workspace: 'middleService211'
-#   needs:
-#      - rootService1
-#      - rootService2
+  middleService2:
+    name: middleService2
+    templateName: 'null resource'
+    workspace: 'middleService2111'
+    needs:
+      - rootService1
+      - rootService2
   finalService:
     name: finalService
     templateName: 'null resource'
-    workspace: 'finalService11'
+    workspace: 'finalService111'
     needs:
       - middleService1
