--- a/workflows/triple/env0.workflow.yml
+++ b/workflows/triple/env0.workflow.yml
@@ -11,6 +11,7 @@ environments:
     name: middleService1
     templateName: 'null resource'
     workspace: 'middleService1111'
+    revision: 'not-exist'
     needs:
       - rootService1
       - rootService2
