--- a/null-with-sleep/env0.yml
+++ b/null-with-sleep/env0.yml
@@ -7,5 +7,5 @@ deploy:
         - echo "Why can't we not be sober"
         - echo "Just want to start this over"
         - echo "Why can't we sleep forever"
-        - sleep 6h
+        - sleep 5m
         - echo "Just want to start this over"
